--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,11 @@
             <version>8.0.11</version>
 
         </dependency>
-
+        <dependency>
+            <groupId>com.mchange</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.5.2</version>
+        </dependency>
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
